--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /primeNumber/build/
 /showPrime/nbproject/private/
 /showPrime/build/
+/workingDay/nbproject/private/
+/WokingDay/nbproject/private/
