--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 /showPrime/build/
 /workingDay/nbproject/private/
 /WokingDay/nbproject/private/
+/WokingDay/build/
+/Main/nbproject/private/
+/Main/build/
