--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@
 /WokingDay/build/
 /Main/nbproject/private/
 /Main/build/
+/Pen/nbproject/private/
+/StringComparator/nbproject/private/
+/StringComparator/build/
+/Pen/build/
