--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@
 /Pen/build/
 /Marks/nbproject/private/
 /Marks/build/
+/StudentMarks/nbproject/private/
+/StudentMarks/build/
+/StudentMarks/dist/
+/Statistics/nbproject/private/
+/Statistics/build/
