--- a/AplicacionPrueba/nbproject/private/private.properties
+++ b/AplicacionPrueba/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/roi.castrocalvar/.netbeans/23/build.properties
+user.properties.file=C:\\Users\\Roi\\AppData\\Roaming\\NetBeans\\23\\build.properties
