--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,8 @@
 /Matrix/build/
 /AdventCalendar/nbproject/private/
 /AdventCalendar/build/
+/Teistris/nbproject/private/
+/Teistris/build/
+/Teistris/Teistris/build/
+/Teistris/Teistris/dist/
+/Teistris/Teistris/nbproject/private/
