--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@
 /DataBase/nbproject/private/
 /DataBase/build/
 /Contacts/nbproject/private/
+/Primitiva/nbproject/private/
+/Primitiva/build/
+/SortedArray/nbproject/private/
+/SortedArray/build/
