--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@
 /Primitiva/build/
 /SortedArray/nbproject/private/
 /SortedArray/build/
+/Pruba/nbproject/private/
+/Pruba/build/
+/BrainBreaker/nbproject/private/
+/BrainBreaker/build/
