--- a/Xerarquia/nbproject/project.properties
+++ b/Xerarquia/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Xerarquia
-main.class=xerarquia.Xerarquia
+main.class=xerarquia.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
