--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,9 @@
 /AlphabetSoup/build/
 /Xerarquia/nbproject/private/
 /Xerarquia/build/
+/HelloWordGUI/nbproject/private/
+/HelloWordGUI/build/
+/Celsius/nbproject/private/
+/CelsiusConverterProject/nbproject/private/
+/CelsiusConverterProject/build/
+/EcuationGrafic/nbproject/private/
