--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,9 @@
 /CelsiusConverterProject/nbproject/private/
 /CelsiusConverterProject/build/
 /EcuationGrafic/nbproject/private/
+/evenAndOddNumbers/nbproject/private/
+/evenAndOddNumbers/build/
+/SliderEvenAndOddNumbers/nbproject/private/
+/SliderEvenAndOddNumbers/build/
+/BarradDeMenus/nbproject/private/
+/BarradDeMenus/build/
