Calculadora de precios 14/2/2025

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,5 @@
 /SliderEvenAndOddNumbers/build/
 /BarradDeMenus/nbproject/private/
 /BarradDeMenus/build/
+/CalculadoraPrezo/nbproject/private/
+/CalculadoraPrezo/build/
