--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,17 @@
 /CelsiusConverterProject/nbproject/private/
 /CelsiusConverterProject/build/
 /EcuationGrafic/nbproject/private/
+/EcuationGrafic/build/
+/Animais/nbproject/private/
+/Animais/build/
+/AnimalCheck/nbproject/private/
+/AnimalCheck/build/
+/AnimalComboBox/nbproject/private/
+/AnimalComboBox/build/
+/AnimalsJList/nbproject/private/
+/AnimalsJList/build/
+/ParesOuImpares/nbproject/private/
+/ParesOuImpares/build/
+/ProbaJavaFX/target/
+/XogoDeCartas/nbproject/private/
+/XogoDeCartas/build/
