--- a/XogoDeCartas/nbproject/private/private.properties
+++ b/XogoDeCartas/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/roi.castrocalvar/.netbeans/25/build.properties
+user.properties.file=C:\\Users\\roica\\AppData\\Roaming\\NetBeans\\23\\build.properties
