--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,7 @@
 /Padel/build/
 /Hogwarts/nbproject/private/
 /Hogwarts/build/
+/MyFirstJDBC_APP/nbproject/private/
+/MyFirstJDBC_APP/build/
+/peliculasDb/nbproject/private/
+/peliculasDb/build/
