--- a/peliculasDb/nbproject/project.properties
+++ b/peliculasDb/nbproject/project.properties
@@ -35,11 +35,13 @@ dist.jlink.output=${dist.jlink.dir}/peliculasDb
 excludes=
 file.reference.mariadb-java-client-3.5.3.jar=/home/roi.castrocalvar/Descargas/Programacion/mariadb-java-client-3.5.3.jar
 file.reference.sqlite-jdbc-3.49.1.0.jar=/home/roi.castrocalvar/Descargas/Programacion/sqlite-jdbc-3.49.1.0.jar
+file.reference.sqlite-jdbc-3.49.1.0.jar-1=C:\\Users\\Roi\\Downloads\\sqlite-jdbc-3.49.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.sqlite-jdbc-3.49.1.0.jar}:\
-    ${file.reference.mariadb-java-client-3.5.3.jar}
+    ${file.reference.mariadb-java-client-3.5.3.jar}:\
+    ${file.reference.sqlite-jdbc-3.49.1.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
