--- a/CifradoCesar/nbproject/project.properties
+++ b/CifradoCesar/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Padel.jar
+dist.jar=${dist.dir}/CifradoCesar.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Padel
+dist.jlink.output=${dist.jlink.dir}/CifradoCesar
 excludes=
 includes=**
 jar.compress=false
@@ -70,12 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Padel
-<<<<<<< Updated upstream
-main.class=padel.controler.InitMenuController
-=======
-main.class=padel.Padel
->>>>>>> Stashed changes
+jlink.launcher.name=CifradoCesar
+main.class=CifradoCesar
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
