--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,13 @@
 /CifradoCesar/build/
 /CifradoCesar/dist/
 /FicherosCopia/nbproject/private/
+/FicherosCopia/dist/
+/FicherosCopia/build/
+/FicheroLines/nbproject/private/
+/FicheroLines/build/
+/FicheroLines/dist/
+/FicheroTokenAToken/nbproject/private/
+/FicheroTokenAToken/build/
+/FicheroTokenAToken/dist/
+/tacebook/nbproject/private/
+/tacebook/build/
