--- a/FicheroLines/nbproject/project.properties
+++ b/FicheroLines/nbproject/project.properties
@@ -28,16 +28,14 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/DataBase.jar
+dist.jar=${dist.dir}/FicheroLines.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/DataBase
+dist.jlink.output=${dist.jlink.dir}/FicheroLines
 excludes=
-file.reference.sqlite-jdbc-3.49.1.0.jar=/home/roi.castrocalvar/Descargas/Cosas/Programacion/sqlite-jdbc-3.49.1.0.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.49.1.0.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -72,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=DataBase
-main.class=database.DataBase
+jlink.launcher.name=FicheroLines
+main.class=ficherolines.FicheroLines
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
