--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,9 @@
 /FicheroTokenAToken/dist/
 /tacebook/nbproject/private/
 /tacebook/build/
+/DataBase/dist/
+/Translator/target/
+/Translator/nbproject/private/
+/Translator/dist/
+/Translator/build/
+/taceboock/nbproject/private/
