--- a/DataBase/nbproject/project.properties
+++ b/DataBase/nbproject/project.properties
@@ -34,10 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DataBase
 excludes=
 file.reference.sqlite-jdbc-3.49.1.0.jar=/home/roi.castrocalvar/Descargas/Cosas/Programacion/sqlite-jdbc-3.49.1.0.jar
+file.reference.sqlite-jdbc-3.49.1.0.jar-1=C:\\Users\\Roi\\Downloads\\sqlite-jdbc-3.49.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.49.1.0.jar}
+    ${file.reference.sqlite-jdbc-3.49.1.0.jar}:\
+    ${file.reference.sqlite-jdbc-3.49.1.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
